--- a/index.html
+++ b/index.html
@@ -14259,8 +14259,7 @@ a.anchor-link {
 
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Final-Project">Final Project<a class="anchor-link" href="#Final-Project">&#182;</a></h1><p>Joy Wang, Stephanie Wang, Lucinda Zhou</p>
-<p>CMSC320</p>
+<h1 id="CMSC320-Final-Project:-How-Politics-Impacts-COVID">CMSC320 Final Project: How Politics Impacts COVID<a class="anchor-link" href="#CMSC320-Final-Project:-How-Politics-Impacts-COVID">&#182;</a></h1><h4 id="Joy-Wang,-Stephanie-Wang,-Lucinda-Zhou">Joy Wang, Stephanie Wang, Lucinda Zhou<a class="anchor-link" href="#Joy-Wang,-Stephanie-Wang,-Lucinda-Zhou">&#182;</a></h4><p><br></p>
 
 </div>
 </div>
